--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,6 +32,19 @@
             <groupId>liga.medical</groupId>
             <artifactId>analyzer-dto</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>2.3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.3.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
