--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,19 +32,10 @@
             <groupId>liga.medical</groupId>
             <artifactId>analyzer-dto</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-amqp</artifactId>
-            <version>2.3.7</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <version>2.3.7</version>
-        </dependency>
-
     </dependencies>
 
     <build>
